# voice-test-harness

./: .env.example  .gitignore  CLAUDE.md  LATENCY_MEASUREMENT.md  README.md  TESTING_RULES.md  active_scenario.yaml  analyze.py  e2e_config.json  harness.yaml  phone_test.py  prompt.txt  pyproject.toml  run.py  test_agent_config.json  test_agent_config_slim.json  twiml_server.py
feature-implementation-notes/: common-mistakes.md  plausibility-check.md
prompts/: refund_agent.txt
scenarios/: basic_english.yaml  isbank_e2e.yaml  prompt_concise.yaml  prompt_verbose.yaml  ttft_benchmark.yaml  ttft_no_ensemble.yaml  turkish_bank_latency.yaml  turkish_bank_realistic.yaml  turkish_stt.yaml
scripts/: batch_run.sh  run_scenario.sh
tester/: agent.py  pyproject.toml
